// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag/> renders tag 1`] = `
<span
  className="tag primary lg"
>
  Foo
</span>
`;

exports[`<Tag/> renders the verification status Tag 1`] = `
<span
  className="tag success sm"
>
  Verified
</span>
`;

exports[`<Tag/> renders the verification status Tag 2`] = `
<span
  className="tag error sm"
>
  Unverified
</span>
`;

exports[`<Tag/> renders the verification status Tag 3`] = `
<span
  className="tag error sm"
>
  Failed
</span>
`;

exports[`<Tag/> renders the verification status Tag 4`] = `
<span
  className="tag error sm"
>
  Expired
</span>
`;

exports[`<Tag/> renders the verification status Tag 5`] = `null`;
